modified:   notebooks/02_corpora-matching.ipynb

--- a/notebooks/08_parsing.ipynb
+++ b/notebooks/08_parsing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-28T11:35:14.398728Z",
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "#setup\n",
-    "%matplotlib notebook\n",
+    "#%matplotlib notebook\n",
     "import pandas as pd\n",
     "import spacy\n",
     "from spacy import displacy\n",
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-28T11:26:09.842198Z",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-28T11:26:10.878513Z",
@@ -287,7 +287,7 @@
     {
      "data": {
       "text/html": [
-       "<span class=\"tex2jax_ignore\"><svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"b3b0b9af75c848b594caaa1ca7c511b8-0\" class=\"displacy\" width=\"1625\" height=\"399.5\" direction=\"ltr\" style=\"max-width: none; height: 399.5px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
+       "<span class=\"tex2jax_ignore\"><svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"92e8f66bbdf94436a63510e00f642b4c-0\" class=\"displacy\" width=\"1625\" height=\"399.5\" direction=\"ltr\" style=\"max-width: none; height: 399.5px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
        "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
        "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"50\">Science</tspan>\n",
        "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"50\">NOUN</tspan>\n",
@@ -295,7 +295,7 @@
        "\n",
        "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
        "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"225\">can</tspan>\n",
-       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"225\">VERB</tspan>\n",
+       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"225\">AUX</tspan>\n",
        "</text>\n",
        "\n",
        "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
@@ -334,65 +334,65 @@
        "</text>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-b3b0b9af75c848b594caaa1ca7c511b8-0-0\" stroke-width=\"2px\" d=\"M70,264.5 C70,2.0 575.0,2.0 575.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-92e8f66bbdf94436a63510e00f642b4c-0-0\" stroke-width=\"2px\" d=\"M70,264.5 C70,2.0 575.0,2.0 575.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-b3b0b9af75c848b594caaa1ca7c511b8-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">nsubj</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-92e8f66bbdf94436a63510e00f642b4c-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">nsubj</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M70,266.5 L62,254.5 78,254.5\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-b3b0b9af75c848b594caaa1ca7c511b8-0-1\" stroke-width=\"2px\" d=\"M245,264.5 C245,89.5 570.0,89.5 570.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-92e8f66bbdf94436a63510e00f642b4c-0-1\" stroke-width=\"2px\" d=\"M245,264.5 C245,89.5 570.0,89.5 570.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-b3b0b9af75c848b594caaa1ca7c511b8-0-1\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">aux</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-92e8f66bbdf94436a63510e00f642b4c-0-1\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">aux</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M245,266.5 L237,254.5 253,254.5\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-b3b0b9af75c848b594caaa1ca7c511b8-0-2\" stroke-width=\"2px\" d=\"M420,264.5 C420,177.0 565.0,177.0 565.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-92e8f66bbdf94436a63510e00f642b4c-0-2\" stroke-width=\"2px\" d=\"M420,264.5 C420,177.0 565.0,177.0 565.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-b3b0b9af75c848b594caaa1ca7c511b8-0-2\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">neg</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-92e8f66bbdf94436a63510e00f642b4c-0-2\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">neg</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M420,266.5 L412,254.5 428,254.5\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-b3b0b9af75c848b594caaa1ca7c511b8-0-3\" stroke-width=\"2px\" d=\"M770,264.5 C770,89.5 1095.0,89.5 1095.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-92e8f66bbdf94436a63510e00f642b4c-0-3\" stroke-width=\"2px\" d=\"M770,264.5 C770,89.5 1095.0,89.5 1095.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-b3b0b9af75c848b594caaa1ca7c511b8-0-3\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">det</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-92e8f66bbdf94436a63510e00f642b4c-0-3\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">det</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M770,266.5 L762,254.5 778,254.5\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-b3b0b9af75c848b594caaa1ca7c511b8-0-4\" stroke-width=\"2px\" d=\"M945,264.5 C945,177.0 1090.0,177.0 1090.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-92e8f66bbdf94436a63510e00f642b4c-0-4\" stroke-width=\"2px\" d=\"M945,264.5 C945,177.0 1090.0,177.0 1090.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-b3b0b9af75c848b594caaa1ca7c511b8-0-4\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">amod</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-92e8f66bbdf94436a63510e00f642b4c-0-4\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">amod</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M945,266.5 L937,254.5 953,254.5\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-b3b0b9af75c848b594caaa1ca7c511b8-0-5\" stroke-width=\"2px\" d=\"M595,264.5 C595,2.0 1100.0,2.0 1100.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-92e8f66bbdf94436a63510e00f642b4c-0-5\" stroke-width=\"2px\" d=\"M595,264.5 C595,2.0 1100.0,2.0 1100.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-b3b0b9af75c848b594caaa1ca7c511b8-0-5\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">dobj</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-92e8f66bbdf94436a63510e00f642b4c-0-5\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">dobj</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M1100.0,266.5 L1108.0,254.5 1092.0,254.5\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-b3b0b9af75c848b594caaa1ca7c511b8-0-6\" stroke-width=\"2px\" d=\"M1120,264.5 C1120,177.0 1265.0,177.0 1265.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-92e8f66bbdf94436a63510e00f642b4c-0-6\" stroke-width=\"2px\" d=\"M1120,264.5 C1120,177.0 1265.0,177.0 1265.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-b3b0b9af75c848b594caaa1ca7c511b8-0-6\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">prep</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-92e8f66bbdf94436a63510e00f642b4c-0-6\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">prep</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M1265.0,266.5 L1273.0,254.5 1257.0,254.5\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-b3b0b9af75c848b594caaa1ca7c511b8-0-7\" stroke-width=\"2px\" d=\"M1295,264.5 C1295,177.0 1440.0,177.0 1440.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-92e8f66bbdf94436a63510e00f642b4c-0-7\" stroke-width=\"2px\" d=\"M1295,264.5 C1295,177.0 1440.0,177.0 1440.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-b3b0b9af75c848b594caaa1ca7c511b8-0-7\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">pobj</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-92e8f66bbdf94436a63510e00f642b4c-0-7\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">pobj</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M1440.0,266.5 L1448.0,254.5 1432.0,254.5\" fill=\"currentColor\"/>\n",
        "</g>\n",
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-28T11:26:12.225503Z",
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-28T11:26:12.569391Z",
@@ -489,15 +489,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-28T11:35:38.703128Z",
      "start_time": "2022-04-28T11:35:38.327678Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(S (NP (NN Science)) (VP (MD can) (RB not) (VP (VB solve) (NP (NP (DT the) (JJ ultimate) (NN mystery)) (PP (IN of) (NP (NN nature)))))) (. .))\n",
+      "('S',)\n",
+      "Science\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/torch/distributions/distribution.py:44: UserWarning: <class 'torch_struct.distributions.TreeCRF'> does not define `arg_constraints`. Please set `arg_constraints = {}` or initialize the distribution with `validate_args=False` to turn off validation.\n",
+      "  warnings.warn(f'{self.__class__} does not define `arg_constraints`. ' +\n"
+     ]
+    }
+   ],
    "source": [
+    "#benepar.download('benepar_en3')\n",
     "nlp = spacy.load('en_core_web_sm')\n",
     "nlp.add_pipe('benepar', config={'model': 'benepar_en3'})\n",
     "doc = nlp('Science cannot solve the ultimate mystery of nature.')\n",
@@ -505,7 +524,7 @@
     "print(sent._.parse_string)\n",
     "print(sent._.labels)\n",
     "print(list(sent._.children)[0])\n",
-    "nltk.Tree.fromstring(sent._.parse_string)"
+    "#nltk.Tree.fromstring(sent._.parse_string)"
    ]
   },
   {
@@ -522,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-28T11:26:20.966653Z",
@@ -706,7 +725,7 @@
        "[32567 rows x 7 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,14 +736,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-28T11:26:48.223089Z",
      "start_time": "2022-04-28T11:26:22.347181Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/torch/distributions/distribution.py:44: UserWarning: <class 'torch_struct.distributions.TreeCRF'> does not define `arg_constraints`. Please set `arg_constraints = {}` or initialize the distribution with `validate_args=False` to turn off validation.\n",
+      "  warnings.warn(f'{self.__class__} does not define `arg_constraints`. ' +\n"
+     ]
+    }
+   ],
    "source": [
     "df = df.sample(n=2000)\n",
     "df[\"processed\"] = df[\"snippet\"].apply(lambda x: nlp(x))\n"
@@ -732,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-28T11:26:54.226289Z",
@@ -751,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-28T11:26:55.499246Z",
@@ -763,31 +791,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('penalty', 'be') 229\n",
-      "('-pron-', 'be') 192\n",
-      "('state', 'seek') 160\n",
-      "('-pron-', 'have') 70\n",
-      "('statute', 'be') 52\n",
-      "('jury', 'recommend') 48\n",
-      "('-pron-', 'consider') 44\n",
-      "('-pron-', 'vote') 43\n",
-      "('this', 'be') 41\n",
-      "('-pron-', 'find') 41\n",
-      "('court', 'find') 39\n",
-      "('that', 'be') 39\n",
-      "('defendant', 'be') 38\n",
-      "('-pron-', 'do') 33\n",
+      "('penalty', 'be') 215\n",
+      "('state', 'seek') 120\n",
+      "('it', 'be') 87\n",
+      "('this', 'be') 68\n",
+      "('jury', 'recommend') 47\n",
+      "('he', 'be') 46\n",
+      "('statute', 'be') 46\n",
+      "('jury', 'find') 44\n",
+      "('defendant', 'be') 42\n",
+      "('court', 'find') 41\n",
+      "('that', 'be') 33\n",
       "('court', 'hold') 32\n",
-      "('jury', 'find') 31\n",
-      "('-pron-', 'believe') 30\n",
-      "('case', 'be') 29\n",
-      "('-pron-', 'impose') 29\n",
-      "('-pron-', 'say') 28\n",
-      "('imposition', 'be') 27\n",
-      "('who', 'be') 26\n",
-      "('-pron-', 'seek') 25\n",
-      "('-pron-', 'hold') 25\n",
-      "('court', 'impose') 23\n"
+      "('jury', 'impose') 31\n",
+      "('it', 'seek') 30\n",
+      "('case', 'be') 28\n",
+      "('court', 'impose') 26\n",
+      "('he', 'receive') 26\n",
+      "('we', 'find') 24\n",
+      "('imposition', 'be') 24\n",
+      "('who', 'be') 23\n",
+      "('defendant', 'eligible') 22\n",
+      "('we', 'hold') 21\n",
+      "('court', 'err') 20\n",
+      "('we', 'have') 20\n",
+      "('state', 'file') 20\n"
      ]
     }
    ],
@@ -803,52 +831,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-28T11:26:57.056681Z",
      "start_time": "2022-04-28T11:26:56.948455Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<spacy.lang.en.English at 0x17e83ef70>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# install coreference resolution for spacy\n",
-    "# !pip install neuralcoref\n",
+    "\n",
+    "# !pip install neuralcoref --no-binary neuralcoref\n",
     "import neuralcoref\n",
     "neuralcoref.add_to_pipe(nlp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-28T11:27:12.984788Z",
      "start_time": "2022-04-28T11:27:12.966722Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "[My sister: [My sister, She], a dog: [a dog, him]]\n",
-      "My sister has a dog. My sister loves a dog.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Coreference Resolution\n",
     "doc = nlp(u'My sister has a dog. She loves him.')\n",
@@ -1072,7 +1080,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1086,7 +1094,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
