--- a/notebooks/extras.ipynb
+++ b/notebooks/extras.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "liable-focus",
    "metadata": {},
    "source": [
     "# 10 Extras: Sequence Models and Transformers"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "republican-encyclopedia",
    "metadata": {},
    "source": [
     "Additional references: \n",
@@ -22,8 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "intermediate-operations",
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T16:28:40.562418Z",
@@ -71,7 +68,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "655d7d23-77e3-4b47-a6ec-e7f7848e0489",
    "metadata": {},
    "source": [
     "# Entity Embeddings"
@@ -79,8 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "13d9fb81-3716-415e-8fbe-76840d9d2f64",
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T06:30:57.665050Z",
@@ -101,7 +96,6 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "b21241a2-8470-4cd2-8778-168b312f519b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T06:30:58.095289Z",
@@ -127,7 +121,6 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "0776475a-2722-42f4-a84c-b720ff3d61d3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T06:30:58.433595Z",
@@ -160,7 +153,6 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "da9a6a05-0cc1-4dff-84b7-3b773a8b83b8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T06:30:59.136690Z",
@@ -199,7 +191,6 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "7343f439-9d6d-4f75-929d-964ebe9f16c2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T06:31:03.019931Z",
@@ -319,7 +310,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52c0b069-2cd6-47c3-8aa4-8bcc023b8676",
    "metadata": {},
    "source": [
     "# Word Embeddings"
@@ -327,8 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "3b055cd1-71bf-4b9b-8728-fb1660151d83",
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T18:54:06.512553Z",
@@ -342,7 +331,7 @@
        "768"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +349,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "11e78ca6-1cc2-4ac4-8c27-428e17a42ea5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T18:54:07.459936Z",
@@ -1385,8 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "74a85ec1-c481-42d0-9577-7105c674078d",
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T18:54:10.034045Z",
@@ -1400,7 +1387,7 @@
        "13971"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,8 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "cadf83be-aaf4-4d75-ae65-52e715ea5862",
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T18:54:10.914155Z",
@@ -1429,7 +1415,7 @@
        "(768, 13971)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1428,6 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "ace325cd-892f-4b33-b1c3-c95cbf6e43a1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T18:54:11.299486Z",
@@ -1468,7 +1453,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "03b3cd59-52f1-45e7-9985-993f875d5784",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T18:54:12.646820Z",
@@ -1494,7 +1478,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "0208c729-428a-4fe2-a4d9-f5a847b9891c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T18:54:14.100173Z",
@@ -1635,7 +1618,6 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "3aa2400c-4fb4-4ae3-aeb3-b8384368ce5e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T18:54:15.860136Z",
@@ -1674,7 +1656,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "eaba5feb-82ba-4c9d-9712-fd2146895371",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T18:54:26.000974Z",
@@ -1886,7 +1867,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "69f01257-bc4c-45f7-8842-7a50defb18c3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T18:54:26.073631Z",
@@ -1916,7 +1896,6 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "af91cc8f-3d1a-4d0c-8971-9fc3b5ae7648",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T18:54:26.890136Z",
@@ -1938,7 +1917,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "236fccc9-75f5-4cf3-bcf4-9fca59c1dbdd",
    "metadata": {},
    "source": [
     "# Embedding Lookup\n",
@@ -1951,7 +1929,6 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "cfd68008-a2c4-48f1-9c27-f5ecbddbe248",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T22:31:25.921344Z",
@@ -1982,7 +1959,6 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "94ee5ba6-13c3-47b4-869c-95dd0c992367",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T22:31:27.115362Z",
@@ -2014,7 +1990,6 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "1f5ab279-442c-48bd-8632-dd9d589e70da",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T22:31:30.251742Z",
@@ -2042,7 +2017,6 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "deb542cc-eef9-492c-b149-42babdc76122",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T22:31:30.296817Z",
@@ -2071,7 +2045,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d59833d-8fd3-4db7-9e44-154fdbf0ae2a",
    "metadata": {},
    "source": [
     "**Embedding lookup**"
@@ -2080,7 +2053,6 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "37c0b793-f548-42fb-b5cd-f138ce72253c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T22:31:31.959505Z",
@@ -2120,14 +2092,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89b78422-91e3-4d2c-a564-88d65ebde99d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "hollow-saskatchewan",
    "metadata": {},
    "source": [
     "# Huggingface Transformer"
@@ -2136,7 +2106,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "successful-elite",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T16:28:43.360106Z",
@@ -2163,7 +2132,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continuous-grant",
    "metadata": {},
    "source": [
     "Load the model from a pretrained checkpoint. "
@@ -2172,7 +2140,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "reported-stone",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T16:29:04.222014Z",
@@ -2334,7 +2301,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "premium-monitor",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T16:29:46.864883Z",
@@ -2368,7 +2334,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "particular-desperate",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T16:45:38.818606Z",
@@ -2435,7 +2400,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "authentic-coaching",
    "metadata": {},
    "source": [
     "More infos about huggingface tokenizers can be found [here](https://huggingface.co/transformers/main_classes/tokenizer.html).\n",
@@ -2446,7 +2410,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "outstanding-tolerance",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T16:45:40.928552Z",
@@ -2487,7 +2450,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "medium-bangkok",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T16:45:41.393502Z",
@@ -2522,7 +2484,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "satisfactory-shakespeare",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T16:47:09.918297Z",
@@ -2564,7 +2525,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "scenic-noise",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T16:47:46.266853Z",
@@ -2628,7 +2588,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "together-loading",
    "metadata": {},
    "source": [
     "So far, we considered the pytorch version for transformers. It also works with keras, a more in-depth tutorial can be found [here](https://towardsdatascience.com/working-with-hugging-face-transformers-and-tf-2-0-89bf35e3555a)."
@@ -2637,7 +2596,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vanilla-order",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2647,7 +2605,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "killing-muslim",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T16:51:32.596448Z",
@@ -2716,7 +2673,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "impressive-lightning",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T16:51:32.605055Z",
@@ -2757,7 +2713,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "legendary-homeless",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T16:54:06.621809Z",
@@ -2774,7 +2729,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "temporal-addiction",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T16:54:15.329792Z",
@@ -2791,7 +2745,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "indirect-volleyball",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T16:54:15.427831Z",
@@ -2808,7 +2761,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "centered-clinton",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T16:54:48.434829Z",
@@ -2838,7 +2790,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0328d6b9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-28T13:51:19.545240Z",
@@ -2854,7 +2805,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1c24baa2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T17:52:53.421160Z",
@@ -2882,7 +2832,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "ed335c59",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T17:54:01.942006Z",
@@ -2912,7 +2861,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ac126a45",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T17:56:43.915607Z",
@@ -2960,7 +2908,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9be2cde8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T17:45:42.141618Z",
@@ -3108,7 +3055,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "5f38db83",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T17:56:35.535049Z",
@@ -3172,7 +3118,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb7c1164",
    "metadata": {},
    "source": [
     "**Text Vectorization Layer** <br>\n",
@@ -3182,7 +3127,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "14dd646f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T18:00:50.904497Z",
@@ -3224,7 +3168,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d311667d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-05T18:03:46.978027Z",
@@ -3319,7 +3262,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb059bc9",
    "metadata": {},
    "source": [
     "**Deep learning tips, tricks and advanced features**"
@@ -3327,8 +3269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bd958785",
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-28T13:52:24.881012Z",
@@ -3347,8 +3288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2a630090",
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-28T13:52:31.224246Z",
@@ -3364,8 +3304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0e2506ed",
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-28T13:52:35.672196Z",
@@ -3380,8 +3319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "00715651",
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-28T13:52:39.947691Z",
@@ -3391,7 +3329,7 @@
    "outputs": [],
    "source": [
     "# batch normalization\n",
-    "from keras.layers.normalization import BatchNormalization\n",
+    "from keras.layers import BatchNormalization\n",
     "model.add(Dense(64, use_bias=False)) \n",
     "model.add(BatchNormalization())\n",
     "model.add(Activation('relu'))"
@@ -3399,8 +3337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "292e4f21",
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-28T13:52:45.714411Z",
@@ -3421,8 +3358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e24206ff",
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-28T13:52:50.267897Z",
@@ -3439,8 +3375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2efb5a20",
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-28T13:52:54.944225Z",
@@ -3454,23 +3389,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "15f17b7f",
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-28T13:52:59.699546Z",
      "start_time": "2022-03-28T13:52:59.676350Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 64)                64064     \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 64)                4160      \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 64)                4160      \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 64)                4160      \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 64)                4096      \n",
+      "                                                                 \n",
+      " batch_normalization (BatchN  (None, 64)               256       \n",
+      " ormalization)                                                   \n",
+      "                                                                 \n",
+      " activation (Activation)     (None, 64)                0         \n",
+      "                                                                 \n",
+      " dense_5 (Dense)             (None, 64)                4160      \n",
+      "                                                                 \n",
+      " dense_6 (Dense)             (None, 64)                4160      \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 64)                0         \n",
+      "                                                                 \n",
+      " dense_7 (Dense)             (None, 1)                 65        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 89,281\n",
+      "Trainable params: 89,153\n",
+      "Non-trainable params: 128\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0e56b9f5",
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-28T13:53:04.778410Z",
@@ -3498,7 +3470,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7fa2cc6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-28T13:53:09.279180Z",
@@ -3524,7 +3495,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfc3a8e7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-28T13:53:14.483691Z",
@@ -3545,7 +3515,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff3cdefe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3576,11 +3545,18 @@
     "grid.fit(X.todense(),Y)\n",
     "grid.best_params_"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3594,7 +3570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
