modified:   notebooks/06_intro-ML.ipynb

--- a/notebooks/02_corpora-matching.ipynb
+++ b/notebooks/02_corpora-matching.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "There are several ways to obtain data from the internet. Below are the links to tutorial for these methods:\n",
     "\n",
-    "1. Scraping with [selenium](https://selenium-python.readthedocs.io/) (an example [here](https://towardsdatascience.com/how-to-use-selenium-to-web-scrape-with-example-80f9b23a843a): useful if the webpage contains JS scripts\n",
+    "1. Scraping with [selenium](https://selenium-python.readthedocs.io/) (an example [here](https://towardsdatascience.com/how-to-use-selenium-to-web-scrape-with-example-80f9b23a843a): useful if the webpage contains JS scripts)\n",
     "2. Retrieving raw html with [beautifulsoup](https://beautiful-soup-4.readthedocs.io/en/latest/)\n",
     "3. Quering [REST Api](https://restfulapi.net/) (a nice example [here](https://betterprogramming.pub/extracting-rest-api-data-using-python-with-an-example-e800b03bb62e))"
    ]
