modified:   notebooks/07_word_embeddings.ipynb

--- a/notebooks/03_tokens.ipynb
+++ b/notebooks/03_tokens.ipynb
@@ -64,7 +64,7 @@
       "text/plain": [
        "Index(['case_name', 'opinion_type', 'date_standard', 'authorship',\n",
        "       'x_republican', 'maj_judges', 'dissent_judges', 'topic_id',\n",
-       "       'cite_count', 'opinion_text', 'year', 'log_cite_count'],\n",
+       "       'cite_count', 'opinion_text', 'year', 'log_cite_count', 'preprocessed'],\n",
        "      dtype='object')"
       ]
      },
