modified:   notebooks/extras.ipynb

--- a/notebooks/08_parsing.ipynb
+++ b/notebooks/08_parsing.ipynb
@@ -891,7 +891,7 @@
     "#!pip install spacy==2.3.5\n",
     "\n",
     "#!pip install neuralcoref --no-binary neuralcoref\n",
-    "!python3 -m spacy download en_core_web_md\n",
+    "#!python3 -m spacy download en_core_web_md\n",
     "\n",
     "import neuralcoref\n",
     "neuralcoref.add_to_pipe(nlp)"
